2011-04-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.7-1.
	* msys/issue.log: Updated accordingly.

2011-03-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.2-alpha-3 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-03-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish w32api.

	* mingw32/mingw32-runtime.xml: Update w32api to 3.17-2.
	* mingw32/issue.log: Updated accordingly.

2011-03-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-vim.

	* msys/msys-vim.xml: Update vim to 7.3-2.
	* msys/issue.log: Updated accordingly.

2011-03-18  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-vim.

	* msys/msys-vim.xml: Update vim to 7.3-1.
	* msys/issue.log: Updated accordingly.

2011-03-16  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Add and publish specification for mingw32-pkginfo package.

	* mingw32/mingw32-mingw-get.xml (mingw32-pkginfo): New package;
	add free-standing specification, (there are no dependencies), with...
	(pkginfo): ...this alias name.

	* mingw32/issue.log: Update accordingly.

2011-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct inconsistencies in msys-gettext package names.

	* msys/msys-gettext.xml (msys-gettext): Make dependencies independent
	of MSYS version number; (match using "*" wild-card instead of "%").
	(msys-libintl, msys-libgettextpo, msys-libasprintf): Likewise; also
	include MSYS version number (1.0.13) in release specifications, adding
	"download" tags to map modified release names to actual tarball names.

	* msys/issue.log: Update for publication.

2011-03-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.2-alpha-2 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.
